# aoc-2022

./: .gitignore  LICENSE  pyproject.toml
aoc/day00/: part1.py
aoc/day01/: common.py  part1.py  part2.py
aoc/day02/: part1.py  part2.py
aoc/day03/: part1.py  part2.py
aoc/day04/: part1.py  part2.py
aoc/day05/: part1.py  part2.py
aoc/day06/: part1.py  part2.py
aoc/day07/: part1.py  part2.py
aoc/day08/: part1.py  part2.py
aoc/day09/: part1.py  part2.py
aoc/day10/: part1.py  part2.py
aoc/day11/: part1.py  part2.py
aoc/day13/: part1.py  part2.py
